MODON MRE BPDEV/force-app/main/default/objects/Relix_Signal__e/Relix_Signal__e.object-meta.xml
<CustomObject>
    <description>Signal between the Relix callback endpoint (a public guest), the send job and the case rows. CALLBACK: Relix says a case changed, read it. CASE_CREATED: the create call answered with a caseId; stamped on the row even if the job then rolled back. Published immediately so nothing depends on a transaction committing (SCW-181).</description>
    <label>Relix Signal</label>
    <pluralLabel>Relix Signals</pluralLabel>
</CustomObject>