MODON MRE BPDEV/force-app/main/default/objects/Relix_Signal__e/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <label>Relix Case Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>