MODON MRE BPDEV/force-app/main/default/objects/Relix_Signal__e/fields/Case_Row_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Row_Id__c</fullName>
    <label>Case Row Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>