MODON MRE BPDEV/force-app/main/default/objects/Relix_Signal__e/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <length>20</length>
    <type>Text</type>
</CustomField>